@@ -1,3 +1,12 @@
+81898a7 add support for reconstructing inflections index entries
+f5c337c parsing of exth header failed in some cases
+e60f206 fix: some links reconstruction in kf7 failed
+cc69574 improve debug info
+53ae8a5 failed malloc false reports
+626ceb1 fix problem with uncompressed documents
+76f852d fix broken locales
+29ff462 remove obsolete includes
+693cbe6 git log > changelog
 3911734 improved buffer handling
 5a59f41 improved OPF for dictionaries
 073ad4c proper rawml->orth initialization and freeing
